# IAK-reporting-tool

./: .gitignore  MANIFEST.in  README.md  USAGE.md  config.json.example  pyproject.toml  requirements.txt
IAK_Report/: ExportToPDF.txt  InspectieRapportage.txt  __init__.py  combine_pi_with_appendices.py  config.json.example  export_excel_to_pdf.py  generate_aandachtspunten_beheerder.py  generate_bijlage_3.py  generate_hoogste_risicos.py  generate_pi_rapportage.py  get_voortgang.py  ora_to_word.py  test_yaml.py  utils.py  utilsxls.py
IAK_Report/new_scripts/: generate_bijlage_3.py  generate_pi_rapportage.py
data/: .gitignore
tests/: fix_excel_com.ps1  test_excel_com.py  test_styling_excel.py
