[tool.poetry]
name = "iak-reporting-tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
docx2pdf = ">=0.1.8"
ipykernel = ">=6.29.5"
openpyxl = ">=3.1.5"
pandas = ">=2.2.3"
pillow = ">=11.1.0"
python-docx = ">=1.1.2"
pywin32 = ">=309"
pyxlsb = ">=1.0.10"
setuptools = ">=76.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
